<resources>
    <string name="app_name">Random</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="first_layer">first_layer</string>
    <string name="second_layer">second_layer</string>
    <string name="welcome">Welcome</string>
    <string name="hello">hello</string>
    <string name="button_1">button 1</string>
    <string name="button_2">button 2</string>
    <string name="button_3">button 3</string>
    <string name="button_4">button 4</string>
    <string name="button_5">button 5</string>
    <string name="button_6">button 6</string>
    <string name="button_7">button 7</string>
    <string name="button_8">button 8</string>
    <string name="button_9">button 9</string>
    <string name="button_10">button 10</string>
    <string name="helloTitle">Hello!</string>
    <string name="sign_up">Signup</string>
    <string name="log_in">Login</string>
</resources>