<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@id/hello_title"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helloTitle"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@id/github_logo"
            android:src="@drawable/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Button
            android:id="@id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_margin="40dp"
            app:layout_constraintTop_toBottomOf="@id/github_logo"/>
        <Button
            android:id="@id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            android:text="@string/log_in"/>
</androidx.constraintlayout.widget.ConstraintLayout>